# crypto-contract-trading

./: pyproject.toml  requirements.txt
.github/workflows/: build_windows.yml
config/exchanges/: binance_mainnet.json  binance_testnet.json  okx_mainnet.json  okx_testnet.json
config/risk/: funding_protection.json  leverage_limits.json  position_rules.json
config/risk/hedging_strategies/: basic_arbitrage.json  calendar_spread.json  volatility_hedge.json
config/risk/market_conditions/: high_volatility.json  low_liquidity.json
pyinstaller_hooks/: hook-src.py
scripts/: verify_structure.ps1
src/api/: binance_futures.py  okx_futures.py
src/core/: cli.py
src/core/risk/: funding_monitor.py  leverage_ctl.py  liquidator.py  position_mgr.py
src/core/risk/hedging/: arbitrator.py  spread_engine.py  volatility.py
src/core/strategy/: base.py  macd.py  rsi.py
src/web/static/widgets/: funding_alert.js  hedge_controls.js  market_condition.js
src/web/templates/: hedging_console.html  risk_panel.html
tests/risk/: test_funding_protection.py
tests/risk/test_hedging/: test_arbitrator.py  test_spread.py
tests/risk/test_market_conditions/: test_liquidity.py  test_volatility.py
tests/testnet/: test_funding_rate.py
